# AITextBot

./: .replit  README.md  app.py  event_extractor.py  google_auth.py  google_calendar.py  mailgun_webhook.py  main.py  migrate_add_openai_tracking.py  migrate_add_refresh_token.py  models.py  pyproject.toml  replit.md  routes.py  test_timezone.html
attached_assets/: Pasted-2025-06-16-22-01-23-19-3bd7c47e-User-raise-exc-2025-06-16-22-01-23-19-3bd7c47e-User-File-home-runn-1750136733516_1750136733519.txt  Pasted-create-a-backend-API-service-that-transforms-text-into-calendar-events-It-takes-some-text-either-f-1749843510312_1749843510312.txt
helpers/: __init__.py  domain_utils.py  event_processing.py  event_utils.py  text_processing.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  email_instructions.html  error.html  event_form.html  index.html  privacy.html  terms.html
