[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.2.2",
    "openai>=1.86.0",
    "psycopg2-binary>=2.9.10",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.172.0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "requests>=2.32.4",
    "sentry-sdk>=2.30.0",
    "python-json-logger>=3.3.0",
]
